--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -1,8 +1,60 @@
-UserParameter=asterisk.activeskypechannels,/etc/zabbix/zasterisk.py --skypeactive
-UserParameter=asterisk.activecalls,/etc/zabbix/zasterisk.py --callsactive
-UserParameter=asterisk.activechannels,/etc/zabbix/zasterisk.py --channelsactive
-UserParameter=asterisk.totalskypechannels,/etc/zabbix/zasterisk.py --skypelicense
-UserParameter=asterisk.activeg729encoders,/etc/zabbix/zasterisk.py --g729activeenc
-UserParamater=asterisk.activeg729decoders,/etc/zabbix/zasterisk.py --g729activedec
-UserParameter=asterisk.totalg729channels,/etc/zabbix/zasterisk.py --g729license
+#
+#Правила LLD сканиррования
+#
+UserParameter=asterisk.discovery.trunks,/etc/zabbix/zasterisk.py --trunks
+UserParameter=asterisk.discovery.users,/etc/zabbix/zasterisk.py --users
+UserParameter=asterisk.discovery.IAX2,/etc/zabbix/zasterisk.py --IAX2
+UserParameter=asterisk.discovery.queues,/etc/zabbix/zasterisk.py --queues
+UserParameter=asterisk.discovery.voicemail,/etc/zabbix/zasterisk.py --voicemail
+UserParameter=asterisk.discovery.meetme,/etc/zabbix/zasterisk.py --meetme
+UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
+#
+#Правила опроса SIP провайдеров
+#
+UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip
+UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify
+UserParameter=asterisk.trunk.registry[*],/etc/zabbix/zasterisk.py --trunk.registry
+UserParameter=asterisk.trunk.all.count[*],/etc/zabbix/zasterisk.py --trunk.all.count
+
+#
+#Правила опроса SIP юзеров
+#
+UserParameter=asterisk.user.ip[*],/etc/zabbix/zasterisk.py --user.ip
+UserParameter=asterisk.user.qualify[*],/etc/zabbix/zasterisk.py --user.qualify
+UserParameter=asterisk.user.registry[*],/etc/zabbix/zasterisk.py --user.registry
+UserParameter=asterisk.user.all.count[*],/etc/zabbix/zasterisk.py --user.all.count
+UserParameter=asterisk.user.online.count[*],/etc/zabbix/zasterisk.py --user.online.count
+UserParameter=asterisk.user.offline.count[*],/etc/zabbix/zasterisk.py --user.offline.count
+#
+#Правила опроса IAX
+#
+UserParameter=asterisk.IAX2.ip[*],/etc/zabbix/zasterisk.py --IAX2.ip
+UserParameter=asterisk.IAX2.qualify[*],/etc/zabbix/zasterisk.py --IAX2.qualify
+UserParameter=asterisk.IAX2.registry[*],/etc/zabbix/zasterisk.py --IAX2.registry
+UserParameter=asterisk.IAX2.all.count[*],/etc/zabbix/zasterisk.py --IAX2.all.count
+UserParameter=asterisk.IAX2.online.count[*],/etc/zabbix/zasterisk.py --IAX2.online.count
+UserParameter=asterisk.IAX2.offline.count[*],/etc/zabbix/zasterisk.py --IAX2.offline.count
+#
+#Правила опроса очередей
+#
+UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls
+UserParameter=asterisk.queue.strategy[*],/etc/zabbix/zasterisk.py --queue.strategy
+UserParameter=asterisk.queue.completed[*],/etc/zabbix/zasterisk.py --queue.completed
+UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/zasterisk.py --queue.abandoned
+UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls
+
+#
+#Правила опроса комнат конференций
+#
+
+#
+#Правила опроса комнат конференций
+#
+
+
+
+
+
+
+
 
