--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -5,6 +5,7 @@ UserParameter=asterisk.discovery.trunks,/etc/zabbix/zasterisk.py --trunks
 UserParameter=asterisk.discovery.users,/etc/zabbix/zasterisk.py --users
 UserParameter=asterisk.discovery.IAX2,/etc/zabbix/zasterisk.py --IAX2
 UserParameter=asterisk.discovery.queues,/etc/zabbix/zasterisk.py --queues
+UserParameter=asterisk.discovery.queues.members,/etc/zabbix/zasterisk.py --queues.members
 UserParameter=asterisk.discovery.voicemail,/etc/zabbix/zasterisk.py --voicemail
 UserParameter=asterisk.discovery.meetme,/etc/zabbix/zasterisk.py --meetme
 UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
@@ -41,8 +42,12 @@ UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls
 UserParameter=asterisk.queue.strategy[*],/etc/zabbix/zasterisk.py --queue.strategy
 UserParameter=asterisk.queue.completed[*],/etc/zabbix/zasterisk.py --queue.completed
 UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/zasterisk.py --queue.abandoned
-UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls
-
+UserParameter=asterisk.queue.stateinterface[*],/etc/zabbix/zasterisk.py --queue.stateinterface
+UserParameter=asterisk.queue.membership[*],/etc/zabbix/zasterisk.py --queue.membership
+UserParameter=asterisk.queue.callstaken[*],/etc/zabbix/zasterisk.py --queue.callstaken
+UserParameter=asterisk.queue.lastcall[*],/etc/zabbix/zasterisk.py --queue.lastcall
+UserParameter=asterisk.queue.status[*],/etc/zabbix/zasterisk.py --queue.status
+UserParameter=asterisk.queue.paused[*],/etc/zabbix/zasterisk.py --queue.paused
 #
 #Правила опроса комнат конференций
 #
