--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -12,42 +12,42 @@ UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
 #
 #Правила опроса SIP провайдеров
 #
-UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip
-UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify
-UserParameter=asterisk.trunk.registry[*],/etc/zabbix/zasterisk.py --trunk.registry
-UserParameter=asterisk.trunk.all.count[*],/etc/zabbix/zasterisk.py --trunk.all.count
+UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
+UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
+UserParameter=asterisk.trunk.registry[*],/etc/zabbix/zasterisk.py --trunk.registry $1
+UserParameter=asterisk.trunk.all.count[*],/etc/zabbix/zasterisk.py --trunk.all.count $1
 
 #
 #Правила опроса SIP юзеров
 #
-UserParameter=asterisk.user.ip[*],/etc/zabbix/zasterisk.py --user.ip
-UserParameter=asterisk.user.qualify[*],/etc/zabbix/zasterisk.py --user.qualify
-UserParameter=asterisk.user.registry[*],/etc/zabbix/zasterisk.py --user.registry
-UserParameter=asterisk.user.all.count[*],/etc/zabbix/zasterisk.py --user.all.count
-UserParameter=asterisk.user.online.count[*],/etc/zabbix/zasterisk.py --user.online.count
-UserParameter=asterisk.user.offline.count[*],/etc/zabbix/zasterisk.py --user.offline.count
+UserParameter=asterisk.user.ip[*],/etc/zabbix/zasterisk.py --user.ip $1
+UserParameter=asterisk.user.qualify[*],/etc/zabbix/zasterisk.py --user.qualify $1
+UserParameter=asterisk.user.registry[*],/etc/zabbix/zasterisk.py --user.registry $1
+UserParameter=asterisk.user.all.count[*],/etc/zabbix/zasterisk.py --user.all.count $1
+UserParameter=asterisk.user.online.count[*],/etc/zabbix/zasterisk.py --user.online.count $1
+UserParameter=asterisk.user.offline.count[*],/etc/zabbix/zasterisk.py --user.offline.count $1
 #
 #Правила опроса IAX
 #
-UserParameter=asterisk.IAX2.ip[*],/etc/zabbix/zasterisk.py --IAX2.ip
-UserParameter=asterisk.IAX2.qualify[*],/etc/zabbix/zasterisk.py --IAX2.qualify
-UserParameter=asterisk.IAX2.registry[*],/etc/zabbix/zasterisk.py --IAX2.registry
-UserParameter=asterisk.IAX2.all.count[*],/etc/zabbix/zasterisk.py --IAX2.all.count
-UserParameter=asterisk.IAX2.online.count[*],/etc/zabbix/zasterisk.py --IAX2.online.count
-UserParameter=asterisk.IAX2.offline.count[*],/etc/zabbix/zasterisk.py --IAX2.offline.count
+UserParameter=asterisk.IAX2.ip[*],/etc/zabbix/zasterisk.py --IAX2.ip $1
+UserParameter=asterisk.IAX2.qualify[*],/etc/zabbix/zasterisk.py --IAX2.qualify $1
+UserParameter=asterisk.IAX2.registry[*],/etc/zabbix/zasterisk.py --IAX2.registry $1
+UserParameter=asterisk.IAX2.all.count[*],/etc/zabbix/zasterisk.py --IAX2.all.count $1
+UserParameter=asterisk.IAX2.online.count[*],/etc/zabbix/zasterisk.py --IAX2.online.count $1
+UserParameter=asterisk.IAX2.offline.count[*],/etc/zabbix/zasterisk.py --IAX2.offline.count $1
 #
 #Правила опроса очередей
 #
-UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls
-UserParameter=asterisk.queue.strategy[*],/etc/zabbix/zasterisk.py --queue.strategy
-UserParameter=asterisk.queue.completed[*],/etc/zabbix/zasterisk.py --queue.completed
-UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/zasterisk.py --queue.abandoned
-UserParameter=asterisk.queue.stateinterface[*],/etc/zabbix/zasterisk.py --queue.stateinterface
-UserParameter=asterisk.queue.membership[*],/etc/zabbix/zasterisk.py --queue.membership
-UserParameter=asterisk.queue.callstaken[*],/etc/zabbix/zasterisk.py --queue.callstaken
-UserParameter=asterisk.queue.lastcall[*],/etc/zabbix/zasterisk.py --queue.lastcall
-UserParameter=asterisk.queue.status[*],/etc/zabbix/zasterisk.py --queue.status
-UserParameter=asterisk.queue.paused[*],/etc/zabbix/zasterisk.py --queue.paused
+UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls $1
+UserParameter=asterisk.queue.strategy[*],/etc/zabbix/zasterisk.py --queue.strategy $1
+UserParameter=asterisk.queue.completed[*],/etc/zabbix/zasterisk.py --queue.completed $1
+UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/zasterisk.py --queue.abandoned $1
+UserParameter=asterisk.queue.stateinterface[*],/etc/zabbix/zasterisk.py --queue.stateinterface $1
+UserParameter=asterisk.queue.membership[*],/etc/zabbix/zasterisk.py --queue.membership $1
+UserParameter=asterisk.queue.callstaken[*],/etc/zabbix/zasterisk.py --queue.callstaken $1
+UserParameter=asterisk.queue.lastcall[*],/etc/zabbix/zasterisk.py --queue.lastcall $1
+UserParameter=asterisk.queue.status[*],/etc/zabbix/zasterisk.py --queue.status $1
+UserParameter=asterisk.queue.paused[*],/etc/zabbix/zasterisk.py --queue.paused $1
 #
 #Правила опроса комнат конференций
 #
