--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -16,7 +16,6 @@ UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
 UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
 UserParameter=asterisk.trunk.registry[*],/etc/zabbix/zasterisk.py --trunk.registry $1
 UserParameter=asterisk.trunk.all.count[*],/etc/zabbix/zasterisk.py --trunk.all.count $1
-
 #
 #Правила опроса SIP юзеров
 #
@@ -53,7 +52,7 @@ UserParameter=asterisk.queue.paused[*],/etc/zabbix/zasterisk.py --queue.paused $
 #
 
 #
-#Правила опроса комнат конференций
+#Правила опроса комнат Воисмаил 
 #
 
 
