userparameter_asterisk.conf отредактирован онлайн на Bitbucket

--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -1,8 +1,9 @@
 #
 #Правила LLD сканиррования
 #
-UserParameter=asterisk.discovery.trunks,/etc/zabbix/zasterisk.py --trunks
-UserParameter=asterisk.discovery.users,/etc/zabbix/zasterisk.py --users
+UserParameter=asterisk.discovery.registry,/etc/zabbix/asterisk-zabbix-py/run.py registry -a
+UserParameter=asterisk.discovery.users,/etc/zabbix/asterisk-zabbix-py/run.py peer -a
+
 UserParameter=asterisk.discovery.IAX2,/etc/zabbix/zasterisk.py --IAX2
 UserParameter=asterisk.discovery.queues,/etc/zabbix/zasterisk.py --queues
 UserParameter=asterisk.discovery.queues.members,/etc/zabbix/zasterisk.py --queues.members
@@ -12,6 +13,8 @@ UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
 #
 #Правила опроса SIP провайдеров
 #
+UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -n $1
+
 UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
 UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
 UserParameter=asterisk.trunk.registry[*],/etc/zabbix/zasterisk.py --trunk.registry $1
