--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -2,7 +2,7 @@
 #Правила LLD сканиррования
 #
 UserParameter=asterisk.discovery.registry,/etc/zabbix/asterisk-zabbix-py/run.py registry -a
-UserParameter=asterisk.discovery.users,/etc/zabbix/asterisk-zabbix-py/run.py peer -a
+UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py peer -a
 
 UserParameter=asterisk.discovery.IAX2,/etc/zabbix/zasterisk.py --IAX2
 UserParameter=asterisk.discovery.queues,/etc/zabbix/zasterisk.py --queues
@@ -11,9 +11,14 @@ UserParameter=asterisk.discovery.voicemail,/etc/zabbix/zasterisk.py --voicemail
 UserParameter=asterisk.discovery.meetme,/etc/zabbix/zasterisk.py --meetme
 UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
 #
-#Правила опроса SIP провайдеров
+#Правила опроса SIP
 #
 UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -n $1
+UserParameter=asterisk.sip.qualify[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Qualify -n $1
+UserParameter=asterisk.sip.agent[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f SIP-Useragent -n $1
+UserParameter=asterisk.sip.regstate[*],/etc/zabbix/asterisk-zabbix-py/run.py registry -f State -n $1
+
+
 
 UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
 UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
@@ -55,7 +60,7 @@ UserParameter=asterisk.queue.paused[*],/etc/zabbix/zasterisk.py --queue.paused $
 #
 
 #
-#Правила опроса комнат Воисмаил 
+#Правила опроса комнат Воисмаил
 #
 
 
