Поправил параметры для zabbix

--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -13,7 +13,7 @@ UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
 #
 #Правила опроса SIP провайдеров
 #
-UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -n $1
+UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p $1
 
 UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
 UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
