--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -14,7 +14,7 @@ UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
 #Правила опроса SIP
 #
 UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p $1
-UserParameter=asterisk.sip.qualify[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f QualifyFreq -r (\d+) -p $1
+UserParameter=asterisk.sip.qualify[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\d+)" -p $1
 UserParameter=asterisk.sip.agent[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f SIP-Useragent -p $1
 UserParameter=asterisk.sip.regstate[*],/etc/zabbix/asterisk-zabbix-py/run.py registry -f State -p $1
 
