--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -18,6 +18,11 @@ UserParameter=asterisk.sip.qualify[*],/etc/zabbix/asterisk-zabbix-py/run.py peer
 UserParameter=asterisk.sip.agent[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f SIP-Useragent -p $1
 UserParameter=asterisk.sip.regstate[*],/etc/zabbix/asterisk-zabbix-py/run.py registry -f State -p $1
 
+#
+#Количество каналов
+#
+UserParameter=asterisk.core.channels,/etc/zabbix/asterisk-zabbix-py/run.py channel -c
+
 
 UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
 UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
