--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -3,13 +3,9 @@
 #
 UserParameter=asterisk.discovery.registry,/etc/zabbix/asterisk-zabbix-py/run.py registry -a
 UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py peer -a
+UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py queue -a
+UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py member -a
 
-UserParameter=asterisk.discovery.IAX2,/etc/zabbix/zasterisk.py --IAX2
-UserParameter=asterisk.discovery.queues,/etc/zabbix/zasterisk.py --queues
-UserParameter=asterisk.discovery.queues.members,/etc/zabbix/zasterisk.py --queues.members
-UserParameter=asterisk.discovery.voicemail,/etc/zabbix/zasterisk.py --voicemail
-UserParameter=asterisk.discovery.meetme,/etc/zabbix/zasterisk.py --meetme
-UserParameter=asterisk.discovery.dahdi,/etc/zabbix/zasterisk.py --dahdi
 #
 #Правила опроса SIP
 #
@@ -22,51 +18,20 @@ UserParameter=asterisk.sip.regstate[*],/etc/zabbix/asterisk-zabbix-py/run.py reg
 #Количество каналов
 #
 UserParameter=asterisk.core.channels,/etc/zabbix/asterisk-zabbix-py/run.py channel -c
-
-
-UserParameter=asterisk.trunk.ip[*],/etc/zabbix/zasterisk.py --trunk.ip $1
-UserParameter=asterisk.trunk.qualify[*],/etc/zabbix/zasterisk.py --trunk.qualify $1
-UserParameter=asterisk.trunk.registry[*],/etc/zabbix/zasterisk.py --trunk.registry $1
-UserParameter=asterisk.trunk.all.count[*],/etc/zabbix/zasterisk.py --trunk.all.count $1
-#
-#Правила опроса SIP юзеров
-#
-UserParameter=asterisk.user.ip[*],/etc/zabbix/zasterisk.py --user.ip $1
-UserParameter=asterisk.user.qualify[*],/etc/zabbix/zasterisk.py --user.qualify $1
-UserParameter=asterisk.user.registry[*],/etc/zabbix/zasterisk.py --user.registry $1
-UserParameter=asterisk.user.all.count[*],/etc/zabbix/zasterisk.py --user.all.count $1
-UserParameter=asterisk.user.online.count[*],/etc/zabbix/zasterisk.py --user.online.count $1
-UserParameter=asterisk.user.offline.count[*],/etc/zabbix/zasterisk.py --user.offline.count $1
-#
-#Правила опроса IAX
-#
-UserParameter=asterisk.IAX2.ip[*],/etc/zabbix/zasterisk.py --IAX2.ip $1
-UserParameter=asterisk.IAX2.qualify[*],/etc/zabbix/zasterisk.py --IAX2.qualify $1
-UserParameter=asterisk.IAX2.registry[*],/etc/zabbix/zasterisk.py --IAX2.registry $1
-UserParameter=asterisk.IAX2.all.count[*],/etc/zabbix/zasterisk.py --IAX2.all.count $1
-UserParameter=asterisk.IAX2.online.count[*],/etc/zabbix/zasterisk.py --IAX2.online.count $1
-UserParameter=asterisk.IAX2.offline.count[*],/etc/zabbix/zasterisk.py --IAX2.offline.count $1
 #
 #Правила опроса очередей
 #
-UserParameter=asterisk.queue.calls[*],/etc/zabbix/zasterisk.py --queue.calls $1
-UserParameter=asterisk.queue.strategy[*],/etc/zabbix/zasterisk.py --queue.strategy $1
-UserParameter=asterisk.queue.completed[*],/etc/zabbix/zasterisk.py --queue.completed $1
-UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/zasterisk.py --queue.abandoned $1
-UserParameter=asterisk.queue.stateinterface[*],/etc/zabbix/zasterisk.py --queue.stateinterface $1
-UserParameter=asterisk.queue.membership[*],/etc/zabbix/zasterisk.py --queue.membership $1
-UserParameter=asterisk.queue.callstaken[*],/etc/zabbix/zasterisk.py --queue.callstaken $1
-UserParameter=asterisk.queue.lastcall[*],/etc/zabbix/zasterisk.py --queue.lastcall $1
-UserParameter=asterisk.queue.status[*],/etc/zabbix/zasterisk.py --queue.status $1
-UserParameter=asterisk.queue.paused[*],/etc/zabbix/zasterisk.py --queue.paused $1
-#
-#Правила опроса комнат конференций
-#
+UserParameter=asterisk.queue.calls[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Calls -p $1
+UserParameter=asterisk.queue.strategy[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Strategy -p $1
+UserParameter=asterisk.queue.completed[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Completed -p $1
+UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Abandoned -p $1
 
-#
-#Правила опроса комнат Воисмаил
-#
-
+UserParameter=asterisk.queue.stateinterface[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f StateInterface -p $1
+UserParameter=asterisk.queue.membership[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f Membership -p $1
+UserParameter=asterisk.queue.callstaken[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f CallsTaken -p $1
+UserParameter=asterisk.queue.lastcall[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f LastCall -p $1
+UserParameter=asterisk.queue.status[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f Status -p $1
+UserParameter=asterisk.queue.paused[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f Paused -p $1
 
 
 
