--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -3,8 +3,8 @@
 #
 UserParameter=asterisk.discovery.registry,/etc/zabbix/asterisk-zabbix-py/run.py registry -a
 UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py peer -a
-UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py queue -a
-UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py member -a
+UserParameter=asterisk.discovery.queue,/etc/zabbix/asterisk-zabbix-py/run.py queue -a
+UserParameter=asterisk.discovery.member,/etc/zabbix/asterisk-zabbix-py/run.py member -a
 
 #
 #Правила опроса SIP
