--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -25,6 +25,8 @@ UserParameter=asterisk.queue.calls[*],/etc/zabbix/asterisk-zabbix-py/run.py queu
 UserParameter=asterisk.queue.strategy[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Strategy -p $1
 UserParameter=asterisk.queue.completed[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Completed -p $1
 UserParameter=asterisk.queue.abandoned[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Abandoned -p $1
+UserParameter=asterisk.queue.holdtime[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Holdtime -p $1
+UserParameter=asterisk.queue.talktime[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f TalkTime -p $1
 
 UserParameter=asterisk.queue.stateinterface[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f StateInterface -p $1
 UserParameter=asterisk.queue.membership[*],/etc/zabbix/asterisk-zabbix-py/run.py member -f Membership -p $1
