ADD IAX2 monitoring, python-2.6 compatible

--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -1,6 +1,6 @@
 #
 #Правила LLD сканиррования
-#
+#Rules LLD discovery
 UserParameter=asterisk.discovery.registry,/etc/zabbix/asterisk-zabbix-py/run.py registry -a
 UserParameter=asterisk.discovery.peers,/etc/zabbix/asterisk-zabbix-py/run.py peer -a
 UserParameter=asterisk.discovery.queue,/etc/zabbix/asterisk-zabbix-py/run.py queue -a
@@ -8,19 +8,26 @@ UserParameter=asterisk.discovery.member,/etc/zabbix/asterisk-zabbix-py/run.py me
 
 #
 #Правила опроса SIP
-#
+#Rules SIP request field
 UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p $1
 UserParameter=asterisk.sip.qualify[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\d+)" -p $1
 UserParameter=asterisk.sip.agent[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f SIP-Useragent -p $1
 UserParameter=asterisk.sip.regstate[*],/etc/zabbix/asterisk-zabbix-py/run.py registry -f State -p $1
 
 #
-#Количество каналов
+##Правила опроса iAX2
+#Rules IAX2 request field
+UserParameter=asterisk.iax2.ip[*],/etc/zabbix/externalscripts/asterisk-zabbix-py/run.py iax2 -f IPaddress -p $1
+UserParameter=asterisk.iax2.qualify[*],/etc/zabbix/externalscripts/asterisk-zabbix-py/run.py iax2 -f Status -r "(\d+)" -p $1
+UserParameter=asterisk.iax2.status[*],/etc/zabbix/externalscripts/asterisk-zabbix-py/run.py iax2 -f Status -r "(\w+)" -p $1
+
 #
+#Количество каналов
+#Number of channel
 UserParameter=asterisk.core.channels,/etc/zabbix/asterisk-zabbix-py/run.py channel -c
 #
 #Правила опроса очередей
-#
+#Rules for get QUEUE parametr
 UserParameter=asterisk.queue.calls[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Calls -p $1
 UserParameter=asterisk.queue.strategy[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Strategy -p $1
 UserParameter=asterisk.queue.completed[*],/etc/zabbix/asterisk-zabbix-py/run.py queue -f Completed -p $1
