--- a/userparameter_asterisk.conf
+++ b/userparameter_asterisk.conf
@@ -11,6 +11,7 @@ UserParameter=asterisk.discovery.member,/etc/zabbix/asterisk-zabbix-py/run.py me
 #Rules SIP request field
 UserParameter=asterisk.sip.ip[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p $1
 UserParameter=asterisk.sip.qualify[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\d+)" -p $1
+UserParameter=asterisk.sip.status[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\w+)" -p $1
 UserParameter=asterisk.sip.agent[*],/etc/zabbix/asterisk-zabbix-py/run.py peer -f SIP-Useragent -p $1
 UserParameter=asterisk.sip.regstate[*],/etc/zabbix/asterisk-zabbix-py/run.py registry -f State -p $1
 
